--- a/client/src/index.html
+++ b/client/src/index.html
@@ -213,7 +213,32 @@
     </div>
   </div>
   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="app.js"></script>
+  <!-- Subscription Management Section -->
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-12">
+        <div class="card">
+          <div class="card-header">
+            <h2 class="card-title">Subscription Management</h2>
+          </div>
+          <div class="card-body">
+            <div id="subscription-flow-container">
+              <!-- Subscription flow components will be rendered here -->
+              <div class="text-center">
+                <div class="spinner-border" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="container mt-5 mb-5">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
+  </div>
 </body>
 </html> 
