improve UI to create subscriptions

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -241,7 +241,7 @@
             
             <!-- Separate subscription section with its own heading -->
             <div class="mt-4">
-              <h3 class="mb-3">Subscription Management</h3>
+              <h3 class="mb-3">Your Subscriptions</h3>
               <div id="subscription-flow-container">
                 <!-- Subscription flow components will be rendered here -->
                 <div class="text-center">
